--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   number: 0
-  noarch: python
+  skip: True  # [py27]
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
 
 requirements:
@@ -23,7 +23,7 @@ requirements:
     - setuptools
     - pip
   run:
-    - python >=3
+    - python
     - ipython >=4
     - pygments
     - pandas
