--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,16 +20,19 @@ requirements:
   host:
     - python >=3
     - setuptools
+    - wheel
     - pip
   run:
     - python >=3
-    - ipython >=4
-    - pygments
     - pandas
 
 test:
   imports:
     - saspy
+  requires:
+    - pip
+  commands:
+    - pip check
 
 about:
   home: https://github.com/sassoftware/saspy
